--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "devDependencies": {},
   "scripts": {
      "dev": "parcel src/index.html",
-    "build": "parcel build src/index.htmlnpm run"
+    "build": "parcel build src/index.html"
   },
   "repository": {
     "type": "git",
